CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
CMAKE_POLICY(VERSION 3.0)
PROJECT(OnlineTracker)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(Gflags REQUIRED)
FIND_PACKAGE(Glog REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

ADD_DEFINITIONS(-std=c++11)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${GFLAGS_INCLUDE_DIRS} ${GLOG_INCLUDE_DIRS})

SET(SOURCE_FILES main.cpp frame_source.cpp)
SET(HEADER_FILES frame_source.h)
ADD_EXECUTABLE(OnlineTracker ${SOURCE_FILES} ${HEADER_FILES})

TARGET_LINK_LIBRARIES(OnlineTracker ${OpenCV_LIBS} ${GFLAGS_LIBRARIES} ${GLOG_LIBRARIES})
INSTALL(TARGETS OnlineTracker RUNTIME DESTINATION bin)
